--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
                 <h1 class="header_h1">Known quotes from the anime Attack on Titan</h1>
             </header>
 			<main class="main">
-				<div class="quote_box">
-					<p class="quote_text"></p>
+				<div class="buttons">
+					<button type="button" id="last_quote">
+						<img src="resources/icons/left-arrow.png" alt="arrow-left" class="arrow_left">
+					</button>
+					<button type="button" id="next_quote">
+						<img src="resources/icons/right-arrow.png" alt="arrow-right" class="arrow_right">
+					</button>
 				</div>
+				<div class="quote_box">
+					<p id="quote_text">“Give up on your dreams and die.<br><br> -Levi Ackerman”</p>
+				</div>
+				<button type="button" id="quote_copy">Copy Quote</button>
 			</main>
 			<footer class="footer">
 				<p class="footer_text">
@@ -32,6 +41,25 @@
 					<a href="https://www.flaticon.com/free-icons/direction" title="direction icons">Direction icons created by NeXore88 - Flaticon</a>
 				</p>
 			</footer>
+			<script>
+				var quotes = [
+					'"It Doesn\'t Matter How Strong The Opposition Is. It Doesn\'t Matter How Fearsome The World Is, It Doesn\'t Matter How Cruel The World Is. Fight!"<br><br>Eren Yeager',
+					'"If There Are Humans Who Can Bring About Change, They\'re Those Who Are Capable Of Abandoning Everything. People Who, When Required To Surpass Even Monsters, Are Capable Of Tossing Aside Their Very Humanity."<br><br>Armin Arlert',
+					'"I Don\'t Like The Terms "Good Person" or "Bad Person." It Is Impossible To Be Entirely Good To Everyone. To Some, You Are A Good Person, While To Others, You Are A Bad Person."<br><br>Armin Arlert',
+					'Miche Zacharius: "As Long As We Continue To Fight, We Are Not Defeated!"<br><br>Miche Zacharius',
+					'"If You Win, You Live. If You Lose, You Die. If You Don\'t Fight, You Can\'t Win!"<br><br>Eren Yeager',
+					'"You Understand, Don’t You? One Day Or Another, Everyone You Care About Eventually Dies. It\’s Something We Simply Can’t Accept. It’s A Realization That Could Drive You Insane."<br><br>Hange Zoë',
+					'"You\'re Gonna Care What Other People Think And Be Someone You\'re Not Your Whole Life? You’re Fine As You Are. So, Talk In Your Own Words."<br><br>Ymir',
+					'"Everyone Had To Be Drunk On Somethin’ To Keep Pushing On … Everyone Was A Slave To Somethin’."<br><br>Kenny Ackerman',
+					'"This World Is Cruel, And It’s Also Very Beautiful."<br><br>Mikasa Ackerman',
+					'"No One Knows What The Outcome Will Be. So, Choose Whatever You\'ll Regret The Least."<br><br>Levi Ackerman',
+				]
+				document.getElementById("next_quote").onclick = function(){
+					var quote = quotes[Math.floor(Math.random()*10)];
+					console.log(quote)
+					document.getElementById("quote_text").innerHTML = quote;
+				}
+			</script>
 		</div>
 	</body>
 </html>
