--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 		</div>
 		<script>
 			var quotes = [
-				"\"It Doesn't Matter How Strong The Opposition Is. It Doesn't Matter How Fearsome The World Is, It Doesn't Matter How Cruel The World Is. Fight!\"<br><br><span class=\"author\">Eren Yeager</,span>",
+				'"It Doesn\'t Matter How Strong The Opposition Is. It Doesn\'t Matter How Fearsome The World Is, It Doesn\'t Matter How Cruel The World Is. Fight!"<br><br><span class="author">Eren Yeager</,span>',
 				'"If There Are Humans Who Can Bring About Change, They\'re Those Who Are Capable Of Abandoning Everything. People Who, When Required To Surpass Even Monsters, Are Capable Of Tossing Aside Their Very Humanity."<br><br><span class="author">Armin Arlert</span>',
 				'"I Don\'t Like The Terms "Good Person" or "Bad Person." It Is Impossible To Be Entirely Good To Everyone. To Some, You Are A Good Person, While To Others, You Are A Bad Person."<br><br><span class="author">Armin Arlert</span>',
 				'Miche Zacharius: "As Long As We Continue To Fight, We Are Not Defeated!"<br><br><span class="author">Miche Zacharius</span>',
-				"\"If You Win, You Live. If You Lose, You Die. If You Don't Fight, You Can't Win!\"<br><br><span class=\"author\">Eren Yeager</span>",
+				'"If You Win, You Live. If You Lose, You Die. If You Don\'t Fight, You Can\'t Win!"<br><br><span class="author">Eren Yeager</span>',
 				'"You Understand, Don’t You? One Day Or Another, Everyone You Care About Eventually Dies. It\’s Something We Simply Can’t Accept. It’s A Realization That Could Drive You Insane."<br><br><span class="author">Hange Zoë</span>',
-				"\"You're Gonna Care What Other People Think And Be Someone You're Not Your Whole Life? You’re Fine As You Are. So, Talk In Your Own Words.\"<br><br><span class=\"author\">Ymir</span>",
+				'"You\'re Gonna Care What Other People Think And Be Someone You\'re Not Your Whole Life? You’re Fine As You Are. So, Talk In Your Own Words."<br><br><span class="author">Ymir</span>',
 				'"Everyone Had To Be Drunk On Somethin’ To Keep Pushing On … Everyone Was A Slave To Somethin’."<br><br><span class="author">Kenny Ackerman</span>',
 				'"This World Is Cruel, And It’s Also Very Beautiful."<br><br><span class="author">Mikasa Ackerman</span>',
 				'"No One Knows What The Outcome Will Be. So, Choose Whatever You\'ll Regret The Least."<br><br><span class="author">Levi Ackerman</span>',
@@ -64,6 +64,15 @@
 				document.getElementById("quote_text").innerHTML = quote;
 				return quote;
 			};
+			//Copy Button (funktioniert noch nicht)
+			document.getElementById("quote_copy").onclick = navigator.clipboard.writeText(quote).then(
+				function () {
+					console.log("Async: Copying to clipboard was successful!");
+				},
+				function (err) {
+					console.error("Async: Could not copy text: ", err);
+				}
+			);
 		</script>
 	</body>
 </html>
