--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				'"It Doesn\'t Matter How Strong The Opposition Is. It Doesn\'t Matter How Fearsome The World Is, It Doesn\'t Matter How Cruel The World Is. Fight!"<br><br><span class="author">Eren Yeager</,span>',
 				'"If There Are Humans Who Can Bring About Change, They\'re Those Who Are Capable Of Abandoning Everything. People Who, When Required To Surpass Even Monsters, Are Capable Of Tossing Aside Their Very Humanity."<br><br><span class="author">Armin Arlert</span>',
 				'"I Don\'t Like The Terms "Good Person" or "Bad Person." It Is Impossible To Be Entirely Good To Everyone. To Some, You Are A Good Person, While To Others, You Are A Bad Person."<br><br><span class="author">Armin Arlert</span>',
-				'Miche Zacharius: "As Long As We Continue To Fight, We Are Not Defeated!"<br><br><span class="author">Miche Zacharius</span>',
+				'"As Long As We Continue To Fight, We Are Not Defeated!"<br><br><span class="author">Miche Zacharius</span>',
 				'"If You Win, You Live. If You Lose, You Die. If You Don\'t Fight, You Can\'t Win!"<br><br><span class="author">Eren Yeager</span>',
 				'"You Understand, Don’t You? One Day Or Another, Everyone You Care About Eventually Dies. It\’s Something We Simply Can’t Accept. It’s A Realization That Could Drive You Insane."<br><br><span class="author">Hange Zoë</span>',
 				'"You\'re Gonna Care What Other People Think And Be Someone You\'re Not Your Whole Life? You’re Fine As You Are. So, Talk In Your Own Words."<br><br><span class="author">Ymir</span>',
