--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Spectral:wght@300&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Shingeki no Kyojin quotes</title>
+		<title>AoT quotes</title>
 	</head>
 	<body>
 		<div class="container">
